// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vertical Layout Vertical layout renders correctly 1`] = `
preact-render-spy (1 nodes)
-------
<div class="undefined ">
  <div>Test element</div>
  <button>Test button</button>
  <div>Extra test element</div>
</div>

`;

exports[`Vertical Layout Vertical layout renders correctly when centered 1`] = `
preact-render-spy (1 nodes)
-------
<div class="undefined undefined">
  <div>Test element</div>
  <button>Test button</button>
  <div>Extra test element</div>
</div>

`;

exports[`Vertical Layout Vertical layout renders correctly when left-aligned 1`] = `
preact-render-spy (1 nodes)
-------
<div class="undefined undefined">
  <div>Test element</div>
  <button>Test button</button>
  <div>Extra test element</div>
</div>

`;

exports[`Vertical Layout Vertical layout renders correctly when right-aligned 1`] = `
preact-render-spy (1 nodes)
-------
<div class="undefined undefined">
  <div>Test element</div>
  <button>Test button</button>
  <div>Extra test element</div>
</div>

`;
